test-expected/large/foologon/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: logon
    foo.com/duversion: 2.21.0-20190909.1568065315744
    foo.com/version: 2.21.0
  labels:
    app.kubernetes.io/name: foologon
    helm.sh/chart: foologon-2.21.0
  name: foologon
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: cache1
    port: 35001
    targetPort: cache1
  - name: cache2
    port: 35002
    targetPort: cache2
  - name: cache3
    port: 35003
    targetPort: cache3
  selector:
    app.kubernetes.io/name: foologon
  type: ClusterIP
